--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" lang="en" href="#home">
-          <img src="images/rayany_1.png" alt="Rayany Logo" height="auto" width="44" />
+          <img src="images/rayany_1.png" alt="Falcon Localisation Logo" height="auto" width="44" />
           <div class="mx-4">
             <span class="">Falcon Localisation</span>
             <p class="mb-0">Translation & DTP Services</p>
@@ -225,7 +225,7 @@
         <div class="row mb-5">
           <div class="col-lg-10 mx-auto">
             <p class="lead text-center" data-translate="about.paragraph1">
-              For over 20 years, Rayany Translations has been helping businesses go beyond simple
+              For over 20 years, Falcon Localisation has been helping businesses go beyond simple
               translation. We not only deliver clear, accurate language solutions but also provide
               valuable regulatory insights across a wide range of industries and technical fields.
               Our experts make sure inconsistencies are spotted, errors are corrected, and every
@@ -233,9 +233,9 @@
             </p>
             <p class="lead text-center" data-translate="about.paragraph2">
               We're committed to combining exceptional quality with cost-effective
-              solutions—bringing real value to every client we serve. At Rayany, we pride ourselves
-              on going the extra mile, offering translation services that truly stand out and make a
-              difference.
+              solutions—bringing real value to every client we serve. At Falcon Localisation, we
+              pride ourselves on going the extra mile, offering translation services that truly
+              stand out and make a difference.
             </p>
           </div>
         </div>
@@ -527,7 +527,7 @@
             <div class="testimonial-card">
               <div class="testimonial-content">
                 <p class="testimonial-text" data-translate="testimonials.client1.text">
-                  "Rayany Translations has been an invaluable partner for our business. Their
+                  "Falcon Localisation has been an invaluable partner for our business. Their
                   technical translation services are exceptional, and they consistently deliver
                   accurate, high-quality translations that meet our strict deadlines. Highly
                   recommended!"
@@ -543,9 +543,9 @@
             <div class="testimonial-card">
               <div class="testimonial-content">
                 <p class="testimonial-text" data-translate="testimonials.client2.text">
-                  "The DTP services provided by Rayany are outstanding. Their attention to detail in
-                  typesetting and localization has helped us reach new markets effectively.
-                  Professional, reliable, and always on time."
+                  "The DTP services provided by Falcon Localisation are outstanding. Their attention
+                  to detail in typesetting and localization has helped us reach new markets
+                  effectively. Professional, reliable, and always on time."
                 </p>
                 <div class="testimonial-author">
                   <h5 data-translate="testimonials.client2.name">Xpress Publishing Services</h5>
@@ -558,9 +558,9 @@
             <div class="testimonial-card">
               <div class="testimonial-content">
                 <p class="testimonial-text" data-translate="testimonials.client3.text">
-                  "Working with Rayany on our software development project was a fantastic
-                  experience. Their team delivered a custom web application that exceeded our
-                  expectations. Great communication and technical expertise."
+                  "Working with Falcon Localisation on our software development project was a
+                  fantastic experience. Their team delivered a custom web application that exceeded
+                  our expectations. Great communication and technical expertise."
                 </p>
                 <div class="testimonial-author">
                   <h5 data-translate="testimonials.client3.name">Tamayuz Integrated Company</h5>
@@ -746,8 +746,10 @@
       class="copyright p-3 d-flex justify-content-center align-items-center w-100"
       data-translate="footer.copyright"
     >
-      © 2025 Falcon Localisation for Translation and Desktop Publishing Services. All rights
-      reserved.
+      <span class="text-center"
+        >Copyright © 2025 Falcon Localisation for Translation and Desktop Publishing Services. All
+        rights reserved</span
+      >
     </div>
 
     <!-- Bootstrap JS -->
